syntax = "proto3";

package payment;

option go_package = "gen/payment";

service PaymentService {
    rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
    string user_id = 1;
    double amount = 2;
    string currency = 3;
    string method = 4;
}

message PaymentResponse {
    bool success = 1;
    string transaction_id = 2;
    string message = 3;
    string error_message = 4;
}
